Attempt 2 to fixing the carousel swiping on iPhones

--- a/css/styling.css
+++ b/css/styling.css
@@ -296,7 +296,6 @@ footer {
 	overflow-x: hidden;
 	padding-bottom: 10vh;
 	align-items: center;
-	touch-action: none;
 }
 
 .image {
